Fixed header item alignment

--- a/web/styles.css
+++ b/web/styles.css
@@ -143,7 +143,7 @@ body {
 
 .github-link {
     position: absolute;
-    top: 0px;
+    top: 3px;
     left: 1rem;
     color: #c6c7c7;
     display: flex;
